<resources>
    <string name="app_name">Capstone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Category names-->
    <string name="category_general">General</string>
    <string name="category_books">Books</string>
    <string name="category_film">Film</string>
    <string name="category_music">Music</string>
    <string name="category_theatres">Theatres</string>
    <string name="category_television">Television</string>
    <string name="category_video_games">Video Games</string>
    <string name="category_board_games">Board Games</string>
    <string name="category_nature">Nature</string>
    <string name="category_computers">Computers</string>
    <string name="category_mathematics">Mathematics</string>
    <string name="category_mythology">Mythology</string>
    <string name="category_sports">Sports</string>
    <string name="category_geography">Geography</string>
    <string name="category_history">History</string>
    <string name="category_politics">Politics</string>
    <string name="category_art">Art</string>
    <string name="category_celebrities">Celebrities</string>
    <string name="category_animals">Animals</string>
    <string name="category_vehicles">Vehicles</string>
    <string name="category_comics">Comics</string>
    <string name="category_gadgets">Gadgets</string>
    <string name="category_anime">Anime</string>
    <string name="category_cartoon">Cartoon</string>

    <!--Category resource drawables-->
    <string name="image_general">@drawable/ic_category_general</string>
    <string name="image_books">@drawable/ic_category_books</string>
    <string name="image_film">@drawable/ic_category_film</string>
    <string name="image_music">@drawable/ic_category_music</string>
    <string name="image_theatres">@drawable/ic_category_theatre</string>
    <string name="image_television">@drawable/ic_category_television</string>
    <string name="image_video_games">@drawable/ic_category_video_game</string>
    <string name="image_board_games">@drawable/ic_category_board_games</string>
    <string name="image_nature">@drawable/ic_category_nature</string>
    <string name="image_computers">@drawable/ic_category_computer</string>
    <string name="image_mathematics">@drawable/ic_category_mathematics</string>
    <string name="image_mythology">@drawable/ic_category_mythology</string>
    <string name="image_sports">@drawable/ic_category_sports</string>
    <string name="image_geography">@drawable/ic_category_geography</string>
    <string name="image_history">@drawable/ic_category_history</string>
    <string name="image_politics">@drawable/ic_category_politics</string>
    <string name="image_art">@drawable/ic_category_art</string>
    <string name="image_celebrities">@drawable/ic_category_celebrity</string>
    <string name="image_animals">@drawable/ic_category_animal</string>
    <string name="image_vehicles">@drawable/ic_category_vehicle</string>
    <string name="image_comics">@drawable/ic_category_comics</string>
    <string name="image_gadgets">@drawable/ic_category_gadgets</string>
    <string name="image_anime">@drawable/ic_category_anime</string>
    <string name="image_cartoon">@drawable/ic_category_cartoon</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="boolean_type">boolean</string>
    <string name="multiple_type">multiple</string>

    <string name="zero">0</string>
    <string name="category">category</string>
    <string name="category_code">category_code</string>
    <string name="round_score">round_score</string>

    <string name="true_answer">True</string>
    <string name="false_answer">False</string>

    <string name="max_round_score">/10</string>
    <string name="question_inicial_description">Question:</string>
    <string name="option_1_inicial_description">Option 1:</string>
    <string name="option_2_inicial_description">Option 2:</string>
    <string name="option_3_inicial_description">Option 3:</string>
    <string name="option_4_inicial_description">Option 4:</string>
    <string name="total_score_inicial_description">Total score:</string>
    <string name="points_description">points</string>
    <string name="category_inicial_description">Category:</string>
    <string name="round_score_inicial_description">Round score:</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_test_device">351874082984132</string>
    <string name="trivia_title">TRIVIA</string>
    <string name="total_score_text">Total score</string>
    <string name="start_again">START AGAIN</string>
    <string name="choose_category">CHOOSE CATEGORY</string>
    <string name="choose_another_category">choose another category</string>
    <string name="next">Next</string>
    <string name="results">results</string>
    <string name="type">type</string>
    <string name="difficulty">difficulty</string>
    <string name="question">question</string>
    <string name="correct_answer">correct_answer</string>
    <string name="incorrect_answers">incorrect_answers</string>
    <string name="multiple">multiple</string>
    <string name="max_question_number_column">/10</string>
    <string name="base_opentdb_url">https://opentdb.com/api.php?amount=10</string>
    <string name="last_question_number">last_question_number</string>
    <string name="category_selected">category_selected</string>
    <string name="count">count</string>
    <string name="unfinished_round">unfinished_round</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
