<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".QuestionActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:layout_margin="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/trivia_title"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/score_category_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/score_text_size"
        android:layout_marginTop="@dimen/margin_top_score"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/round_score_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/score_text_size"
        android:layout_marginTop="@dimen/margin_top_score"
        android:layout_marginBottom="@dimen/margin_bottom_score"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_text_size"
        android:text="@string/total_score_text"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/total_score_text_view"
        android:layout_width="@dimen/total_score_layout_size"
        android:layout_height="@dimen/total_score_layout_size"
        android:textSize="@dimen/title_text_size"
        android:layout_margin="@dimen/padding_text_view"
        android:background="@drawable/circle_text_view"
        android:textColor="@color/colorWhite"
        android:gravity="center"/>
    <Button
        android:id="@+id/start_again"
        android:layout_width="@dimen/default_text_width"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/start_again"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/start_again">
    </Button>
    <Button
        android:id="@+id/choose_category"
        android:layout_width="@dimen/default_text_width"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/choose_category"
        android:layout_marginBottom="@dimen/margin"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/choose_another_category">
    </Button>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</LinearLayout>